TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA. 
Rumble
The Builder Academy
builderacademy.net 9091
 
tbaMUD 3.52
[Apr 08 2007] - Rumble
  Removed object type TRAP.
  Removed oasis_delete.h.
  Renamed variable wovel to vowel in ban.c.
  Renamed several functions to lower case.
[Apr 02 2007] - Rumble
  Stopped Checking abbrevs with doors so players can't spam open a, open b, etc.
  Added questpoints!
[Mar 30 2007] - Rumble
  Added unlimited fountains and containers (Thanks Adam Scriven).
  Removed object types MISSILE and FIRE WEAPON.
  Removed the do_oasis function and called the Xedit commands directly (thanks Rhade).
[Mar 25 2007] - Rumble
  Updated idle timer to keep track of imms too (thanks Jamdog).
  Standardized OLC messages.
  Updated README.WIN, README.MSVC8, and README.CYGWIN.
[Mar 20 2007] - Rumble
  Added object type FURNITURE (thanks Dark).
  Added ZZZ directories to plrfiles and plrvars (thanks Zizazat).
  Added 00 files to plrfiles directories (thanks Khorlane).
  Added mail check at reconnect and when coming back from AFK.
[Mar 19 2007] - Rumble
  Added JamDog's updated levenshtein_distance that compiles clean with MSVC++.
  Added AFK to player L-desc.
  Cleaned up the code by running it through a g++ compiler (thanks Rhade).
  Added AFK to the prompt.
  Stop snooping at do_quit to prevent snooping of passwords on deletion or password reset.
[Mar 17 2007] - Rumble
  Fixed locate object spell (thanks JamDog).
  Added plist and and improved history command (thanks Rhade).
  Renamed immort_level_ok to no_mort_to_immort and rewrote the convuluted comments.
[Mar 04 2007] - Rumble
  Fixed fight_messages not displaying (thanks Rhade).
  Removed LVL_FREEZE and set ban/freeze to LVL_GRGOD.
  Added send_cannot_edit function (thanks Rhade).
[Feb 26 2007] - Rumble
  updated CYGWIN.README, FAQ, and README
  Added an in game changelog command (thanks Rhade).