@@ -113,9 +113,7 @@ ACMD(do_oasis_redit)
   /* Make sure the builder is allowed to modify this zone. */
   if (!can_edit_zone(ch, OLC_ZNUM(d))) {
     send_cannot_edit(ch, zone_table[OLC_ZNUM(d)].number);
-    mudlog(BRF, LVL_IMPL, TRUE, "OLC: %s tried to edit zone %d allowed zone %d",
-        GET_NAME(ch), zone_table[OLC_ZNUM(d)].number, GET_OLC_ZONE(ch));
-
+    /* Free the OLC structure. */
     free(d->olc);
     d->olc = NULL;
     return;
